--- a/src/App.css
+++ b/src/App.css
@@ -11,54 +11,21 @@
   --shadow-2: rgba(0, 0, 0, 0.2);
   --shadow-5: rgba(0, 0, 0, 0.5);
 
-  --darkest: #010101;
-  --darker: #0e0e0e;
-  --dark: #1a1a1a;
-  --light: #272727;
-  --lighter: #343434;
-  --lightest: #414141;
-  --superlight: #4d4d4d;
-
-  --text-grey: rgb(170, 170, 170);
-  --text-lightgrey: rgb(214, 214, 214);
-  --text-color: white;
-  --body-bg: var(--darkblue);
-  --highlight: var(--blue);
-  --nav-bg: var(--darkest);
-  --vert-nav-bg: var(--darker);
-  --nav-height: 8vh;
-
-  --g900: rgb(79, 93, 115);
-  --g800: rgb(99, 111, 131);
-  --g700: rgb(118, 129, 146);
-  --g600: rgb(138, 147, 162);
-  --g500: rgb(157, 165, 177);
-  --g400: rgb(177, 183, 193);
-  --g300: rgb(196, 201, 208);
-  --g200: rgb(216, 219, 224);
-  --g100: rgb(235, 237, 239);
-
-  /* primary/background */
-  --darkest: #18191a;
-  /* secondary/elements */
-  --darker: #242526;
-  /* tertiary/interactive */
-  --dark: #393a3b;
-  /* borders/accents */
+  --darkest: rgba(0, 0, 0, 0);
+  --darker: rgba(0, 0, 0, 0.5);
+  --dark: rgba(0, 0, 0, 0.7);
   --light: #3a3b3c;
-  /* text secondary */
   --lighter: #b0b3b8;
-  /* text primary */
   --lightest: #e5e6eb;
 
   --text-grey: var(--lighter);
   --text-lightgrey: var(--lightest);
-  --text-color: var(--lightest);
-  --body-bg: var(--darkest);
-  --highlight: var(--blue);
-  --nav-bg: var(--darker);
-  --vert-nav-bg: var(--darker);
+  --text-color: white;
+  --highlight: #209e91;
+  --nav-bg: rgba(0, 0, 0, 0.85);
+  --vert-nav-bg: rgba(0, 0, 0, 0.5);
   --nav-height: 6vh;
+  --scrollwidth: 8px;
 }
 
 /* Reset, from https://cssreset.com/scripts/eric-meyer-reset-css/ */
@@ -174,19 +141,15 @@ ul {
 html,
 body {
   line-height: 1;
-  max-width: 100%;
-  overflow-x: hidden;
-  background-color: var(--body-bg);
-  font-family: "Merriweather", serif, -apple-system, BlinkMacSystemFont,
+  font-family: "Roboto", sans-serif, -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+    "Droid Sans", "Helvetica Neue", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
-}
-
-html,
-body {
+  background-color: var(--body-bg);
+  background-image: url("assets/blur-bg.jpg");
+  max-width: 100%;
   width: 100%;
   height: 100%;
 }
@@ -216,7 +179,6 @@ h5,
 h6 {
   color: var(--text-color);
   font-size: 1.25rem;
-  font-family: "Lora", serif;
 }
 
 strong {
@@ -226,7 +188,6 @@ strong {
 p {
   color: var(--text-color);
   font-size: 1rem;
-  font-family: "Merriweather", serif;
 }
 
 i {
@@ -309,8 +270,8 @@ img {
 /* Scrollbar */
 
 ::-webkit-scrollbar {
-  height: 12px;
-  width: 12px;
+  height: var(--scrollwidth);
+  width: var(--scrollwidth);
   background-color: var(--darker);
 }
 
