add ticket table to homescreen, redo button component, update nav to be uncollapsed by default

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 
 :root {
   --yellow: #fbc93d;
+  --pink: rgb(255, 131, 152);
+  --green: rgb(0, 255, 64);
   --red: #fb4f4f;
   --blue: #2f8fe2;
   --gblue: #2d88ff;
