--- a/src/app/App.css
+++ b/src/app/App.css
@@ -159,7 +159,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   background-color: var(--body-bg);
-  background-image: url("assets/blur-bg.jpg");
+  background-image: url("../assets/blur-bg.jpg");
   max-width: 100%;
   width: 100%;
   height: 100%;
