update comment, remove unnecessary usage of important in css

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -269,7 +269,7 @@ img {
 .hoverfx3:focus,
 .hoverfx3:hover i,
 .hoverfx3:focus i {
-  color: var(--text-color) !important;
+  color: var(--text-color);
   background-color: var(--highlight);
 }
 
