update developer tag color to have higher contrast with background (for easier readability)

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -20,7 +20,7 @@
   --theme-darkred: #a50101;
   --theme-black: rgba(0, 0, 0, 0.8);
   --theme-white: white;
-  --theme-darkblue: rgb(0, 51, 144);
+  --theme-brightblue: rgb(0, 247, 255);
 
   --shadow-1: rgba(0, 0, 0, 0.1);
   --shadow-2: rgba(0, 0, 0, 0.2);
