refactor and reorganize entire codebase to be more easily understandable; eliminated most 150 line+ components by encapsulating logic, separate styles from functionality in all instances where it reduced complexity, move all store slices to a single directory located in app/flux, rename all files to have index.tsx as their root file for simpler, less verbose imports

--- a/src/components/global/userLink/Popper.css
+++ b/src/components/global/userLink/Popper.css
@@ -1,7 +1,7 @@
 .popper {
-  /* These styles are what we use for the Select
-     component's internal menu too; if changing
-     them, be sure to update MUIOverride.css too. */
+  /* We use these styles for the Select component's
+  internal menu too; if changing them, be sure to
+   update MUIOverride.css too. */
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(3px);
   border-radius: 4px;
