--- a/src/app/App.css
+++ b/src/app/App.css
@@ -167,10 +167,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   background-color: var(--body-bg);
-  width: 100%;
+  text-align: center;
+  width: 100vw;
   max-width: 100%;
   height: 100%;
-  background: url("../assets/blur-bg.jpg") no-repeat center center;
+  background: url("./assets/blur-bg.jpg") no-repeat center center;
   background-size: cover;
   z-index: -1;
 }
@@ -182,12 +183,6 @@ code {
 
 * {
   box-sizing: border-box;
-}
-
-#App {
-  text-align: center;
-  width: 100vw;
-  height: auto;
 }
 
 strong,
@@ -331,17 +326,6 @@ img {
 
 ::selection {
   background: var(--highlight);
-}
-
-/* Loading Animation Wrapper (only used on main screen) */
-
-#loading {
-  color: var(--text-color);
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 /* Alert Dynamic Offset! */
