add ticketModal component, redo collapsedTicket interface, expand on Ticket interface from ticketSlice, tweak various components' styles and props, fix bug that broke hotreloading, redo notification component/collapsed ticket to open a ticketModal instead of redirecting user to a new page

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -43,6 +43,7 @@
   --nav-height: 6vh;
   --scrollwidth: 8px;
   --mobile-nav-height: 8vh;
+  --ticket-border: 1px solid rgba(255, 255, 255, 0.1);
 
   --rs-alert-offset: 87.5px;
 }
