add ticket delegation view and various subcomponents used within it

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -9,6 +9,7 @@
   --blue: #2f8fe2;
   --gblue: #2d88ff;
   --darkblue: #0f131a;
+  --black-bg-green: rgb(65, 179, 0);
 
   --theme-navy: #005562;
   --theme-aqua: #0e8174;
