add forgotPassword/resetPassword/invalidToken pages, extend ProtectedRoute for pages that are available to unauthenticated users only, update Alert component responsiveness, add simple logout functionality, make ProtectedRoute/Routes/Navigation use selectAuthenticated instead of requiring auth props

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -347,9 +347,9 @@ img {
 
 /* Alert Dynamic Offset! */
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1215px) {
   :root {
-    --rs-alert-offset: 0px;
+    --rs-alert-offset: 0px !important;
   }
 }
 
