add blacklist rank, add numeric rank enum and redo all hardcoded permissions values to use the enum (better readability, more flexible/modular), fix form modal permissions bug, make certain selects in editmodal only visible to developers, fix name colors bug

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -26,6 +26,7 @@
   --theme-lightblue: rgb(0, 169, 211);
   --theme-brightblue: rgb(0, 247, 255);
   --theme-grey: rgb(97, 96, 96);
+  --theme-lightgrey: rgb(141, 141, 141);
 
   --shadow-1: rgba(0, 0, 0, 0.1);
   --shadow-2: rgba(0, 0, 0, 0.2);
