--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -180,7 +180,7 @@ body {
   width: 100vw;
   max-width: 100%;
   height: 100%;
-  background: url("./assets/blur-bg.jpg") no-repeat center center;
+  background: url("../assets/blur-bg.jpg") no-repeat center center;
   background-size: cover;
   z-index: -1;
 }
